# Mud98

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  LICENSE.txt  README.md  config  mud98.cfg  player_vs_school_runs.csv  player_vs_school_summary.csv  run  spell_ai.csv
data/: races  (+14 more)
src/: CMakeLists.txt  Makefile  Makefile.clang  act_comm.c  act_comm.h  act_enter.c  act_enter.h  act_info.c  act_info.h  act_move.c  act_move.h  act_obj.c  act_obj.h  act_wiz.c  act_wiz.h  alias.c  alias.h  allocfunc.h  array.h  ban.c  ban.h  benchmark.c  benchmark.h  bit.c  bit.h  build  cmdedit.c  color.c  color.h  combat_metrics.c  combat_metrics.h  combat_ops.h  combat_rom.c  comm.c  comm.h  command.h  config  config.c  config.h  const.c  (+99 more)
src/benchmarks/: benchmark_main.c  benchmarks.c  benchmarks.h  container_benchmarks.c  format_benchmarks.c
src/craft/: act_craft.c  act_craft.h  craft.c  craft.h  craft_olc.c  craft_olc.h  craft_skill.c  craft_skill.h  gather.c  gather.h  recedit.c  recedit.h  recipe.c  recipe.h  workstation.c  workstation.h
src/data/: class.c  class.h  damage.c  damage.h  direction.c  direction.h  events.c  events.h  item.c  item.h  loot.c  loot.h  loot_save.c  mobile.c  mobile.h  mobile_data.c  mobile_data.h  player.h  quest.c  quest.h  race.c  race.h  skill.c  skill.h  social.c  social.h  spell.c  spell.h  stats.c  stats.h  tutorial.c  tutorial.h
src/entities/: affect.c  affect.h  affect_data.c  affect_data.h  area.c  area.h  area_data.c  area_data.h  char_data.c  char_data.h  daycycle_period.c  daycycle_period.h  descriptor.c  descriptor.h  entity.c  entity.h  event.c  event.h  exit_data.c  exit_data.h  extra_desc.c  extra_desc.h  faction.c  faction.h  help_data.c  help_data.h  mob_memory.c  mob_memory.h  mob_prototype.c  mob_prototype.h  mobile.c  mobile.h  obj_prototype.c  obj_prototype.h  object.c  object.h  object_data.c  object_data.h  player_data.c  player_data.h  (+14 more)
src/jansson/: CMakeLists.txt  dtoa.c  dump.c  hashtable.c  hashtable_seed.c  jansson.h  jansson_private_config.h  lookup3.h  strconv.c  utf.h  value.c
src/lox/: array.c  array.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  enum.c  enum.h  function.h  list.c  list.h  lox.h  memory.c  memory.h  native.c  native.h  native_cmds.c  native_funcs.c  native_methods.c  object.c  object.h  ordered_table.c  ordered_table.h  scanner.c  scanner.h  segvec.c  segvec.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/mth/: msdp.c  mth.c  mth.h  telopt.c
src/olc/: aedit.c  bit.c  bit.h  cedit.c  cmdedit.c  editor_stack.c  editor_stack.h  event_edit.c  event_edit.h  gedit.c  hedit.c  loot_edit.c  loot_edit.h  lox_edit.c  lox_edit.h  medit.c  oedit.c  olc.c  olc.h  olc_act.c  olc_save.c  olc_save.h  pedit.c  period_edit.c  period_edit.h  qedit.c  raedit.c  redit.c  scredit.c  screen.c  screen.h  sedit.c  skedit.c  string_edit.c  string_edit.h  tedit.c  theme_edit.c
src/persist/: CMakeLists.txt  README.md  area_persist.c  area_persist.h  persist_io.h  persist_io_adapters.c  persist_io_adapters.h  persist_result.h
src/persist/area/: area_persist.c  area_persist.h
src/persist/area/json/: area_persist_json.c  area_persist_json.h
src/persist/area/rom-olc/: area_persist_rom_olc.c  area_persist_rom_olc.h
src/persist/class/: class_persist.c  class_persist.h
src/persist/class/json/: class_persist_json.c  class_persist_json.h
src/persist/class/rom-olc/: class_persist_rom_olc.c  class_persist_rom_olc.h
src/persist/command/: command_persist.c  command_persist.h
src/persist/command/json/: command_persist_json.c  command_persist_json.h
src/persist/command/rom-olc/: command_persist_rom_olc.c  command_persist_rom_olc.h
src/persist/json/: CMakeLists.txt  area_persist_json.c  area_persist_json.h  class_persist_json.c  class_persist_json.h  persist_json.c  persist_json.h  race_persist_json.c  race_persist_json.h
src/persist/loot/: loot_persist.c  loot_persist.h
src/persist/loot/json/: loot_persist_json.c  loot_persist_json.h
src/persist/loot/rom-olc/: loot_persist_rom_olc.c  loot_persist_rom_olc.h
src/persist/lox/: lox_persist.c  lox_persist.h
src/persist/lox/json/: lox_persist_json.c  lox_persist_json.h
src/persist/lox/rom-olc/: lox_persist_rom_olc.c  (+1 more)
src/persist/player/: player_persist.c  player_persist.h
src/persist/race/: race_persist.c  race_persist.h
src/persist/recipe/: recipe_persist.c  recipe_persist.h
src/persist/rom-olc/: CMakeLists.txt  README.md  area_persist_rom_olc.c  area_persist_rom_olc.h  class_persist_rom_olc.c  class_persist_rom_olc.h  db_rom_olc.h  loader_guard.h  race_persist_rom_olc.c  race_persist_rom_olc.h
src/persist/skill/: skill_persist.c  skill_persist.h
src/persist/social/: social_persist.c  social_persist.h
src/persist/theme/: theme_persist.c  theme_persist.h
src/persist/tutorial/: tutorial_persist.c  tutorial_persist.h
src/snippets/: counter.c  lore.c  merc.dual.v1.c
src/tests/: act_comm_tests.c  act_enter_tests.c  act_move_tests.c  act_obj_tests.c  act_tests.c  act_wiz2_tests.c  act_wiz3_tests.c  act_wiz4_tests.c  act_wiz5_tests.c  act_wiz_tests.c  all_tests.c  area_instancing_tests.c  buffer_tests.c  combat_state_tests.c  container_tests.c  craft_tests.c  damage_tests.c  daycycle_tests.c  entity_tests.c  event_tests.c  faction_tests.c  fight_tests.c  fmt_tests.c  gather_spawn_tests.c  interp_tests.c  login_tests.c  loot_tests.c  lox_ext_tests.c  lox_tests.c  lox_tests.h  magic_tests.c  mem_watchpoint_tests.c  mock.c  mock.h  mock_combat.c  mock_rng.c  mock_skill_ops.c  mock_skill_ops.h  money_tests.c  multihit_tests.c  (+15 more)
tools/WorldEdit/src-tauri/: Cargo.toml  tauri.conf.json
tools/mud98bot/: README.md  pyproject.toml  test_autonomous.py  test_combat.py  test_connection.py  test_login.py  test_stress.py
tools/mud98bot/configs/: bot_accounts.txt  single_bot.yaml  stress_test.yaml
tools/mud98bot/docs/: architechture.md  behaviors.md
tools/mud98bot/mud98bot/: __init__.py  behaviors.py  behaviors.py.bak  client.py  connection.py  coordinator.py  main.py  metrics.py  msdp.py  parser.py  telnet.py
(+381 files in other folders)
